# physics-informed-neural-networks

./: .gitignore  Fisher_KPP_Presentation.pptx  README.md  main.py  pyproject.toml  requirements.txt  run_tests.py
Burgers_Equation/: analytic.py  config.py  data.py  losses.py  model.py  plot.py  trainer.py  utils.py
Burgers_Equation/scripts/: inversepinn_cases.py  inversepinn_data_generation.py  inversepinn_demo.py  inversepinn_plots.py  optuna_tuning.py  optuna_tuning_plots.py  pinn_blind_extrap.py  pinn_cases.py  pinn_data_included.py  pinn_demo.py  pinn_hyperparameters.py  pinn_nophys.py  report_plots.py
Burgers_Equation/tests/: test_data.py  test_smoke.py  test_training.py  test_utils.py
Damped_Oscillator/: config.py  data.py  losses.py  model.py  plot.py  trainer.py  utils.py
Damped_Oscillator/scripts/: inversepinn_data_generation.py  inversepinn_demo.py  inversepinn_plots.py  optuna_tuning.py  optuna_tuning_plots.py  pinn_blind_extrap.py  pinn_demo.py  pinn_hyperparameters.py  pinn_nophys.py  pinn_profiling.py  report_plots.py
Damped_Oscillator/tests/: test_data.py  test_smoke.py  test_training.py  test_utils.py
Fisher_KPP/: analytic.py  config.py  data.py  losses.py  model.py  plot.py  trainer.py  utils.py
Fisher_KPP/scripts/: inversepinn_data_generation.py  inversepinn_demo.py  optuna_tuning.py  optuna_tuning_plots.py  pinn_blind_extrap.py  pinn_cases.py  pinn_demo.py  pinn_nophys.py  report_plots.py
Fisher_KPP/tests/: test_analytic.py  test_config.py  test_data.py  test_losses.py  test_smoke.py  test_training.py
(+4 files in other folders)
