[project]
name = "pinn-dho-burgers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "memory-profiler>=0.61.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "tqdm>=4.68.1",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]
